fixing alignment of feedback page

--- a/public/css/feedback.css
+++ b/public/css/feedback.css
@@ -1,15 +1,16 @@
 #feedback-form {
   background-color: #f1f1f1;
   padding: 20px;
+  padding-top: 100px;
   border-radius: 5px;
   margin: 0 auto;
   width: 50%;
-  height: 90%;
+  height: 80%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   font-size: x-large;
 }
 
-body {
+html,body,.main-box {
 
   height: 120% ;
 }
